--- a/public/css/index.css
+++ b/public/css/index.css
@@ -432,7 +432,122 @@
 	
 	h2.h2-sobre-nos {
 		font-family: one;
-		font-size: 1.8em;
+		font-size: 3em;
+		font-weight: 600;
+		font-style: italic;
+		
+	}
+
+	h2.h2-feedback {
+		font-size: 3em;
+	}
+
+
+	h2.h2-carousel {
+		font-size: 3em;
+		font-weight: bolder;
+		font-family: one;
+		
+	}
+
+	ul.nav-rodape {
+		flex-direction: row !important;
+		justify-content: center !important;
+	}
+
+	li.nav-item {
+		padding: 10px !important;
+	}
+
+	div.fundo-logo {
+		background: url('../img/geral/setup.jpg');
+		background-attachment: fixed;
+		background-size: cover;	
+		height: 350px;
+	}
+
+	img.img {
+		width: 480px;
+	}
+
+	button.carousel-btn {
+		--bs-btn-font-size: 1rem !important;
+		--bs-btn-font-family: one !important;
+	}
+
+	h3.h3-carousel {
+		font-size: 1.6em;
+		font-weight: 400;
+		font-family: one;
+	}
+
+	button.btn-lg {
+		font-size: 1rem !important;
+		font-family: beach;
+	}
+
+	div.img-carousel, div.img-carousel-2 {
+		height: 380px;
+	}
+
+	section#carousel {
+		border: 7px double red;
+		border-left: none;
+		border-right: none;
+		box-shadow: none;		
+	}
+
+	iframe.video {
+		height: 300px;
+	}
+
+	p.p-suporte {
+		font-size: 1.6em;
+		padding: 5px;
+		font-family: roboto;
+		margin-top: 30px;
+	}
+
+	h2.h2-duvida {
+		font-size: 3.2em;
+		color: lightgray;
+		font-family: one;
+	}
+	
+	h3.h3-duvida {
+		font-size: 2.2em;
+		color: lightgray;
+		font-family: one;
+	}
+
+	h2.h2-video {
+		font-family: one;
+		font-size: 1.7em;
+		font-weight: 600;
+		font-style: italic;
+	}
+
+	p.p-video {
+		font-size: 1.3em;
+		color: white;
+		font-family: roboto;
+		margin-top: 10px;
+	}
+}
+
+@media (min-width: 992px) and (max-width: 1100px) {
+
+	p.p-sobre-nos {
+		font-size: 1em !important;
+		color: white;
+		font-family: roboto;
+		margin-top: 10px;
+		padding: 15px;
+	}
+	
+	h2.h2-sobre-nos {
+		font-family: one;
+		font-size: 3em;
 		font-weight: 600;
 		font-style: italic;
 		
@@ -828,7 +943,7 @@ body {
 	background-image: linear-gradient(
 		to right bottom,
 		rgb(0,0,0, 0.9),
-		rgba(15, 15, 15, 0.8)
+		rgba(0, 0, 0, 0.7)
 	  ), url('../img/geral/setup.jpg');
 	background-size: cover;
 	background-position: center;
@@ -836,7 +951,7 @@ body {
 }
 
 .p-sobre-nos {
-	font-size: 1.8em;
+	font-size: 1.4em;
 	color: white;
 	font-family: roboto;
 	margin-top: 10px;
